--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,31 @@
-<h1>Josh Duffy</h1>
-<p>
-  This is the home page for the Josh Duffy. Welcome.
-</p>
+<div class="page-header">
+  <h1>"Not how it's done, but how it can be done..."</h1>
+</div>
+
+<div class="row">
+  <div class="span3">
+    <%= image_tag('senior_pic.jpg', size: "250x350", alt: "Josh's Picture") %>
+  </div>
+  <div class="span9">
+    <div class="well">
+      <p>Welcome! My name is <big><big><big>Josh.</big></big></big></p>
+      <p>I live in Lakewood, Colorado. I love the outdoors, including rock & ice climbing, mountaineering, hiking, biking, you name it... I am passionate about learning, especially when it comes to new technology and basically how things work. I am studying Electrical Engineering as a Junior at Colorado School of Mines in Golden, CO. I look forward to collaborating with others to provide efficient solutions that impact the daily lives of individuals within my community. Enjoy your visit.
+      </p>
+    </div>
+  </div>
+</div>
+<div class="page-header">
+  </div>
+
+<div class="span2 offset4">
+  <a class="btn btn-primary btn-large" href="contact">
+    Contact Me
+  </a>
+</div>
+<div class="span3">
+  <a class="btn btn-primary btn-large" href="portfolio">
+    See My Work
+  </a>
+</div>
+
+
