--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,19 @@
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
+    <%= render 'layouts/shim' %>
   </head>
   <body>
-    <header class="navbar navbar-fixed-top">
+    <header class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "Josh Duffy", '#', id: "logo" %>
+          <a class="brand" href="../">iDuffy.com</a>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Home",    '#' %></li>
-              <li><%= link_to "Help",    '#' %></li>
-              <li><%= link_to "Sign in", '#' %></li>
+              <li><%= link_to "Resume",     resume_path %></li>
+              <li><%= link_to "Portfolio",  portfolio_path %></li>
+              <li><%= link_to "Contact",    contact_path %></li>
+              <li><%= link_to "Home",       root_path %></li>
             </ul>
           </nav>
         </div>
@@ -24,5 +26,6 @@
     <div class="container">
       <%= yield %>
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
