--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,15 @@
 <% provide(:title, 'Contact') %>
-<h1>Contact</h1>
-<p>
-  This is the contact page for Josh Duffy. This is the part where you add me on facebook or follow me on twitter. I guess email works too.
-</p>
+<div class="page-header">
+  <h1>Contact Me</h1>
+</div>
+<ul>
+   <li>Mobile: 303-921-8628</li>
+   <br>
+   <li>Email: 
+   <a href="mailto:josh.m.duffy@gmail.com">Josh.M.Duffy@gmail.com</a></li>
+   <br>
+   <li>Facebook:<!-- Facebook Badge START --><a href="http://www.facebook.com/josh.duffy.5494" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Josh Duffy">Josh Duffy</a><span style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; line-height: 16px; font-variant: normal; font-style: normal; font-weight: normal; color: #555555; text-decoration: none;"></span><br/><a href="http://www.facebook.com/josh.duffy.5494" target="_TOP" title="Josh Duffy"><img src="http://badge.facebook.com/badge/699326086.6391.1395382437.png" style="border: 0px;" /></a><!-- Facebook Badge END --></li>
+   <br>
+   <li>Twitter: <a href="https://twitter.com/JoshDuffy7" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @JoshDuffy7</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></li>
+</ul>
