--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="navbar-static-bottom">
   <div class="container">
     <div class="links">
-        <%= link_to "About",      about_path %>
+        <%= link_to "Resume",     resume_path %>
         <%= link_to "Portfolio",  portfolio_path %>
         <%= link_to "Contact",    contact_path %>
         <%= link_to "Home",       root_path %>
