--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <header class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="../">iDuffy.com</a>
+          <a class="brand" href="../">iDuffy</a>
           <nav>
             <ul class="nav pull-right">
               <li><%= link_to "Resume",     resume_path %></li>
