--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>"Not how it's done, but how it can be done..."</h1>
+  <h1>"Not how it's done, how it can be done..."</h1>
 </div>
 
 <div class="row">
