--- a/app/views/static_pages/resume.html.erb
+++ b/app/views/static_pages/resume.html.erb
@@ -4,6 +4,6 @@
   <h1>Resume</h1>
 </div>
 <div class="span12">
-  <%= image_tag('resume_jan13.jpg', alt: "Josh's Resume") %>
+  <%= image_tag('resume_2-12-2013.jpg', alt: "Josh's Resume") %>
   </div>
 <br>
